# el1xr_opt

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: conda-build.yml  gitHub-test.yml  python-package-conda.yml
data/Home1/: GurobiPepito.py  oM_Data_ElectricityDemand_Home1.csv  oM_Data_Option_Home1.csv  oM_Data_Parameter_Home1.csv  oM_Data_VarMaxDemand_Home1.csv  oM_Data_VarMaxOutflows_Home1.csv  oM_Data_VarMinOutflows_Home1.csv  oM_Data_VarStartUp_Home1.csv  oM_Dict_ElectricityDemand_Home1.csv  oM_Dict_ElectricityGeneration_Home1.csv  oM_Plot_rDurationCurve_Demand_Home1.html  oM_Plot_rDurationCurve_EleBuy_Home1.html  oM_Plot_rDurationCurve_EleSell_Home1.html  oM_Plot_rDurationCurve_NetCharge_Home1.html  oM_Plot_rDurationCurve_TotalOutput_Home1.html  oM_Plot_rEleDemand_Home1.html  oM_Plot_rEleFlexDemand_Home1.html  oM_Result_00_rElectricityDemand_Home1.csv  oM_Result_01_rTotalCost_General_Home1.csv  oM_Result_03_rElectricityNetDemand_Home1.csv  oM_Result_04_rAllElectricityDemand_Home1.csv  oM_Result_07_rEleOutputSummary_Home1.csv  oM_Result_08_rEnergyBalance_Home1.csv  oM_Result_09_rEnergyBalanceVal_Home1.csv  oM_Result_10_rDurationCurve_NetCharge_Home1.csv  oM_Result_11_rDurationCurve_TotalOutput_Home1.csv  oM_Result_12_rDurationCurve_Demand_Home1.csv  oM_Result_13_rDurationCurve_EleBuy_Home1.csv  oM_Result_14_rDurationCurve_EleSell_Home1.csv
docs/rst/: ContactUs.rst  conf.py  index.rst  requirements.txt
el1xr_opt/: el1xr_opt.py
src/: oM_Main.py
tests/: manual_run.py  test_run.py
(+177 files in other folders)
